# swagger.yaml
@@ -125,14 +125,45 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /api/getProducts/{id}:
+    get:
+      summary: Get product by ID
+      tags:
+        - Product
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the product to get
+      responses:
+        '200':
+          description: Thành công
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        '404':
+          description: Product not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/getCategories:
     get:
-      summary: Get all categories
+      summary: Get all category name
       tags:
         - Category
       responses:
         '200':
-          description: Success
+          description: Thành công
           content:
             application/json:
               schema:
@@ -149,7 +180,7 @@ paths:
     post:
       tags:
         - Category
-      summary: Add a new category
+      summary: Create a new category
       requestBody:
         required: true
         content:
@@ -158,7 +189,7 @@ paths:
               $ref: '#/components/schemas/CategoryInput'
       responses:
         '201':
-          description: Category added successfully
+          description: The created category
           content:
             application/json:
               schema:
@@ -179,7 +210,7 @@ paths:
           name: id
           required: true
           schema:
-            type: integer
+            type: string
           description: The ID of the category to delete
       responses:
         '200':
@@ -210,7 +241,7 @@ paths:
           name: id
           required: true
           schema:
-            type: integer
+            type: string
           description: The ID of the category to update
       requestBody:
         required: true
@@ -237,6 +268,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Product:
@@ -244,7 +276,7 @@ components:
       properties:
         product_id:
           type: integer
-          description: ID of the product
+          description: ID của sản phẩm
         name:
           type: string
         description:
@@ -294,10 +326,10 @@ components:
       properties:
         category_id:
           type: integer
-          description: ID of the category
+          description: ID của danh mục
         name:
           type: string
-          description: Name of the category
+          description: Tên của danh mục
       example:
         category_id: 1
         name: Example Category
@@ -309,7 +341,7 @@ components:
       properties:
         name:
           type: string
-          description: Name of the category
+          description: Tên của danh mục
       example:
         name: New Category
 
@@ -328,3 +360,4 @@ components:
           type: string
       example:
         error: Operation error
+
